--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   margin: auto;
   left: 0;
   right: 0;
+  z-index: 20;
 }
 .bg-image {
   z-index: -1;
@@ -30,4 +31,18 @@
 } 
 .login-in-form{
   background-color: rgb(0,0,0,0.7);
+}
+.video-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
