--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
   color: rgb(229, 9, 20);
   fill: currentColor;
   display: block;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .header-container {
-  max-width: 83%;
+  max-width: 100%;
   margin: auto;
   left: 0;
   right: 0;
@@ -36,7 +36,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
+  top: -18px;
   left: 0;
   bottom: 0;
   right: 0;
@@ -46,3 +46,21 @@
   align-items: center;
   overflow: hidden;
 }
+.movie-list::-webkit-scrollbar{
+  width: 0px;
+  height: 0px;
+}
+/* .movie-list:hover::-webkit-scrollbar {
+  width: 8px;              
+  height: 6px;
+}
+
+.movie-list::-webkit-scrollbar-track {
+  background: transparent;        
+}
+
+.movie-list::-webkit-scrollbar-thumb {
+  border-radius: 14px;       
+  border: 3px solid transparent;  
+  background-color: grey;    
+} */
