--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   color: rgb(229, 9, 20);
   fill: currentColor;
   display: block;
+  cursor: pointer;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .header-container {
